--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^5.4.5",
     "sweetalert": "^2.1.2",
     "update-node": "^0.1.0"
   },
