--- a/tracking/package.json
+++ b/tracking/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
-    "@next/font": "13.2.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "autoprefixer": "^10.4.14",
+    "hardhat": "^2.22.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.5"
   }
