--- a/tracking/package.json
+++ b/tracking/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@tabler/icons-react": "^3.5.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "framer-motion": "^11.2.10",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^6.1.6",
     "sweetalert": "^2.1.2",
+    "tailwind-merge": "^2.3.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.19",
     "hardhat": "^2.22.4",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
